# core

./: README.md
baidu_joy_controller/: CMakeLists.txt  package.xml
baidu_joy_controller/include/baidu_joy_controller/: baidu_joy_controller_node.hpp  ds4_joy_converter.hpp  tool.hpp
baidu_joy_controller/launch/: baidu_joy_controller.launch.py
baidu_joy_controller/src/: baidu_joy_controller_node.cpp
joy2/: CMakeLists.txt  package.xml
joy2/drivers/hid-sony/: hid-sony.c
joy2/include/joy/: joy.hpp
joy2/launch/: joy.launch.py
joy2/src/: joy.cpp
lidar_decoder/: CMakeLists.txt  package.xml
lidar_decoder/config/: lidar_data.yaml
lidar_decoder/include/lidar_decoder/: datacontainerbase.h  lidar_decoder_node.hpp  lidar_rawdata.hpp  point_types.h  pointcloudXYZIRADT.h
lidar_decoder/launch/: lidar_decoder.launch.py  lidar_decoder.launch.xml
lidar_decoder/src/: lidar_decoder_node.cpp  lidar_rawdata.cpp  pointcloudXYZIRADT.cpp
lidar_driver/: CMakeLists.txt  package.xml
lidar_driver/include/lidar_driver/: lidar_driver_node.hpp  lidar_input.hpp
lidar_driver/launch/: lidar_driver.launch.py  lidar_driver.launch.xml  lslidar.launch.xml
lidar_driver/src/: lidar_driver_node.cpp  lidar_input.cpp
lidar_msgs/: CMakeLists.txt  package.xml
lidar_msgs/msg/: LidarLayer.msg  LidarPacket.msg  LidarPoint.msg  LidarScan.msg  LidarScanUnified.msg  LidarSweep.msg
map_converter/: CMakeLists.txt  package.xml
map_converter/src/: map_converter.cpp
nightowl_description/: CMakeLists.txt  package.xml
nightowl_description/meshes/: front_camera_link.STL  ins_link.STL  millimeter_wave_radar_link.STL  top_lidar_link.STL
nightowl_description/urdf/: nightowl_description.urdf.xacro  vehicle.urdf.xacro
nightowl_launch/: CMakeLists.txt  package.xml
nightowl_launch/launch/: go.launch.xml
nightowl_launch/launch/map/: map.launch.py  (+1 more)
nightowl_launch/rviz/: go.rviz
nightowl_map/: CMakeLists.txt  package.xml
nightowl_remote_controller/: CMakeLists.txt  package.xml
nightowl_remote_controller/frontend/: client.js  package-lock.json  package.json  tsconfig.json
nightowl_remote_controller/frontend/src/: App.css  App.css.map  App.sass  App.tsx  environment.ts  singleton.ts
nightowl_remote_controller/frontend/src/component/dashboard/: dashboard.css  dashboard.css.map  dashboard.sass  dashboard.tsx
nightowl_remote_controller/frontend/src/component/debugger/: Debugger.tsx  debugger.css  debugger.css.map  debugger.sass
nightowl_remote_controller/frontend/src/component/fpv/: fpv.css  fpv.css.map  fpv.sass  fpv.tsx
nightowl_remote_controller/frontend/src/enum/: autoware-state.enum.ts  gear-state.enum.ts  webrtc-rpc-type.enum.ts  webrtc-state.enum.ts
nightowl_remote_controller/frontend/src/exception/: invalid-arguments.exception.ts  websocket.exception.ts
nightowl_remote_controller/frontend/src/service/: tool.service.ts  webrtc.service.ts
nightowl_remote_controller/include/nightowl_remote_controller/: h264_encoder.hpp  nightowl_remote_controller_node.hpp  tool.hpp  webrtc.hpp
nightowl_remote_controller/launch/: nightowl_remote_controller.launch.py
nightowl_remote_controller/server/: package.json  server.js  users.json
nightowl_remote_controller/src/: h264_encoder.cpp  nightowl_remote_controller_node.cpp  tool.cpp  webrtc.cpp
sanchi_amov/: CMakeLists.txt  package.xml
sanchi_amov/include/sanchi_amov/: sanchi_amov.hpp
sanchi_amov/launch/: imu_100D2.launch.xml
sanchi_amov/src/: sanchi_amov.cpp  sanchi_amov.sync-conflict-20220926-175834-TFMDARP.cpp
smarter_eye_camera/: CMakeLists.txt  package.xml
smarter_eye_camera/include/smarter_eye_camera/: smarter_eye_camera_node.hpp  tool.hpp
smarter_eye_camera/launch/: smarter_eye_camera.launch.py
smarter_eye_camera/src/: smarter_eye_camera_node.cpp
starneto_autoware_interface/: CMakeLists.txt  package.xml
starneto_autoware_interface/include/starneto_autoware_interface/: starneto_autoware_interface_node.hpp  tool.hpp
starneto_autoware_interface/launch/: starneto_autoware_interface.launch.py  starneto_autoware_interface.launch.xml
starneto_autoware_interface/src/: starneto_autoware_interface_node.cpp
starneto_configure/: CMakeLists.txt  README.md  package.xml
starneto_configure/include/starneto_configure/: starneto_configure_node.hpp
starneto_configure/launch/: starneto_configure.launch.py
starneto_configure/src/: starneto_configure_node.cpp
starneto_control/: CMakeLists.txt  package.xml
starneto_control/include/starneto_control/: starneto_control_node.hpp  tools.hpp
starneto_control/launch/: starneto.launch.xml  starneto_control.launch.py  starneto_control.launch.xml
starneto_control/src/: starneto_control_node.cpp
starneto_msgs/: CMakeLists.txt  package.xml
starneto_msgs/msg/: Gpfpd.msg  Gpgga.msg  Gtimu.msg  Pos320Nav.msg
starneto_odometry_converter/: CMakeLists.txt  package.xml
starneto_odometry_converter/config/: params.yaml
starneto_odometry_converter/include/starneto_odometry_converter/: starneto_odometry_converter_node.hpp
starneto_odometry_converter/launch/: starneto_odometry_converter.launch.xml
starneto_odometry_converter/src/: starneto_odometry_converter_node.cpp
yhs_autoware_interface/: CMakeLists.txt  README.md  package.xml
yhs_autoware_interface/include/yhs_autoware_interface/: yhs_autoware_interface_node.hpp
yhs_autoware_interface/launch/: yhs_autoware_interface.launch.py  yhs_autoware_interface.launch.xml
yhs_autoware_interface/src/: yhs_autoware_interface_node.cpp
yhs_can_control/: CMakeLists.txt  package.xml
yhs_can_control/include/yhs_can_control/: diagnostic_publisher.hpp  tool.hpp  yhs_can_control_node.hpp
yhs_can_control/launch/: yhs_can_control.launch.py  yhs_can_control.launch.xml
yhs_can_control/src/: diagnostic_publisher.cpp  yhs_can_control_node.cpp
yhs_can_msgs/: CMakeLists.txt  package.xml
yhs_can_msgs/msg/: BatteryFlagFeedback.msg  BatteryInformationFeedback.msg  CtrlCommand.msg  CtrlFeeback.msg  DiagnosticFeedback.msg  IoCommand.msg  IoFeedback.msg  OdometryFeedback.msg  OnlineStatus.msg  WheelEncoderFeedback.msg  WheelFeedback.msg
(+30 files in other folders)
