<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nightowl_remote_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="autoware@todo.todo">autoware</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ffmpeg</depend>
  <depend>sensor_msgs</depend>
  <depend>tier4_control_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>yhs_can_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
