<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>starneto_odometry_converter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gz923553148@gmail.com">xqe2011</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>starneto_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geographiclib</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
